Updated sorter versions

--- a/doc/releases/0.103.0.rst
+++ b/doc/releases/0.103.0.rst
@@ -12,7 +12,7 @@ Main changes:
 * Added ``PreprocessingPipeline`` class to handle, represent, and reproduce preprocessing steps (#3438, #4000, #3685)
 * Added ``3D-ACG`` postprocessing extension (#3860) and ``noise_cutoff`` quality metric (#4072)
 * Added ``RTSort`` as an external sorter (#3597)
-* Upgraded ``SpykingCircus2`` (v3.0) and ``Tridesclous2`` (v2.1) (#3923)
+* Upgraded ``SpykingCircus2`` and ``Tridesclous2`` to v2025.07 (#3923)
 * API and breaking changes:
 
     * ``return_scaled`` --> ``return_in_uV`` in ``BaseRecording.get_traces()``
