--- a/doc/releases/0.103.0.rst
+++ b/doc/releases/0.103.0.rst
@@ -3,7 +3,7 @@
 SpikeInterface 0.103.0 release notes
 ------------------------------------
 
-Jul 30th 2025
+Jul 31st 2025
 
 Main changes:
 
@@ -15,7 +15,7 @@ Main changes:
 * Upgraded ``SpykingCircus2`` and ``Tridesclous2`` to ``v2025.07`` (#3923)
 * API and breaking changes:
 
-    * ``return_scaled`` --> ``return_in_uV`` in ``BaseRecording.get_traces()`` (#4090)
+    * ``return_scaled`` --> ``return_in_uV`` in ``BaseRecording.get_traces()`` (#3794, #4090, #4093)
     * ``is_scaled`` --> ``is_in_uV`` in ``Templates`` class (#4036)
     * Unsigned integers not automatically cast to signed integers anymore in preprocessing (#3982) (see :ref:`unsigned_to_signed`)
 
@@ -23,12 +23,10 @@ Main changes:
 
 core:
 
-* More `return_scaled` > `return_in_uV` (#4090)
 * Fix set_properties_after_merging when property is boolean. (#4084)
 * Cast samples to int64 after round (#4061)
 * Check for remote paths in check_paths_relative (#4060)
 * Allow `create_sorting_analyzer` to accept dicts (#4037)
-* `Templates.is_scaled` > `Templates.is_in_uV` (#4036)
 * Fix soft vs hard merge issue in analyzer (#4025)
 * Fix sampling rate issue when aggregating (#4024)
 * Add `get_unit_spike_train_in_seconds` to sorting extractor (#4012)
@@ -96,6 +94,7 @@ curation:
 
 widgets:
 
+* Fix plot_amplitudes for sortingview widgets (#4097)
 * Add multi-segment capability to BaseRasterWidget and children (#4035)
 * Allow for `SortingAnalyzer` or `BaseSorter` in `plot_*` (#3941)
 * Plot drifting templates (#3842)
@@ -108,7 +107,6 @@ generators:
 
 * Fix durations in generate_hybrid_recording (#3985)
 * Improve generators (#3973)
-
 
 sortingcomponents:
 
@@ -161,6 +159,18 @@ testing:
 * Fix uniqueness of locations in test_average_across_directions (#4023)
 * Test fixing ibllib (#4020)
 * Limit pytest < 8.4.0 for now (#3966)
+
+
+deprecations:
+
+* Deprecated `spikeinterface.compraison.hybrid` module (#4093)
+* More return_scaled > return_in_uV (#4090)
+* Remove `setup.py` (#4053)
+* `Templates.is_scaled` > `Templates.is_in_uV` (#4036)
+* More deprecation updates for version 0.103.0 (#4033)
+* First pass of deprecation removals for 0.103.0 (#3993)
+* `return_scaled` to `return_in_uV`  (#3794)
+
 
 Contributors:
 
