example jupyter notebook

--- a/examples/get_started/example_bombcell_unit_labelling.ipynb
+++ b/examples/get_started/example_bombcell_unit_labelling.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change this to your analyzer path\n",
+    "# Change this to your analyzer path - you need to have already generated a sorting analyzer. see quickstart.py for how to do this\n",
     "analyzer_path = \"/Users/jf5479/Downloads/M25_D18/kilosort4_sa\"\n",
     "output_folder = Path(analyzer_path) / \"bombcell\"\n",
     "\n",
